Moved category Loading functionality to Landing Page

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,6 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {},
-  "author": "",
+  "author": "Richard Tepfenhart, Joseph Urbina",
   "license": "ISC"
 }
